# hyprfollow

./: Cargo.toml  README.md  install.sh
src/: help.rs  main.rs  options.rs
src/help/: errors.rs  mod.rs
src/monitor/: active_window.rs
src/monitors/: active_window.rs  mod.rs  submap.rs  workspaces.rs
src/options/: full_option.rs  mod.rs  monitor_option.rs
